feat: customize ui for array and map field types

--- a/src/css/formulae.scss
+++ b/src/css/formulae.scss
@@ -58,6 +58,10 @@
     justify-content: flex-start !important;
 }
 
+.flex-justify-end {
+    justify-content: flex-end !important;
+}
+
 .flex-justify-center {
     justify-content: center;
 }
