hiding delete from resource row & fix for dropdown

--- a/src/components/ClusterNodes/clusterNodes.scss
+++ b/src/components/ClusterNodes/clusterNodes.scss
@@ -476,7 +476,7 @@
 .cluster-terminal-hidden {
     visibility: hidden;
     height: 0;
-    .terminal-strip {
+    .cluster-terminal-strip-hidden {
         display: none;
       }
 }
