minor css fixes and class renaming

--- a/src/components/ClusterNodes/clusterNodes.scss
+++ b/src/components/ClusterNodes/clusterNodes.scss
@@ -476,7 +476,7 @@
 .cluster-terminal-hidden {
     visibility: hidden;
     height: 0;
-    .terminal-strip {
+    .terminal-action-strip {
         display: none;
       }
 }
