--- a/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
+++ b/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
@@ -215,6 +215,9 @@
 .pod-terminal-hidden {
     visibility: hidden;
     height: 0;
+    .terminal-action-strip {
+        display: none;
+      }
 }
 
 .pod-terminal-hidden * {
