--- a/src/components/workflowEditor/workflowEditor.scss
+++ b/src/components/workflowEditor/workflowEditor.scss
@@ -10,11 +10,10 @@
 }
 
 .workflow-editor {
-	min-height: calc(100vh - 128px);
+	height: 100%;
 	overflow: visible;
 	min-width: 840px;
-	padding: 24px;
-	margin-bottom: 220px;
+	padding: 16px 20px;
 	.open-cipipeline-banner {
 		top: -40px;
 		left: 50%;
