Changes for opening commit drawer on click of commit card

--- a/src/components/app/details/appDetails/appDetails.scss
+++ b/src/components/app/details/appDetails/appDetails.scss
@@ -1973,6 +1973,7 @@ table.resource-tree {
             line-height: 18px;
             align-self: flex-start;
             cursor: pointer;
+            margin-left: 4px;
         }
     }
 }
