--- a/src/components/app/details/appDetails/appDetails.scss
+++ b/src/components/app/details/appDetails/appDetails.scss
@@ -1973,7 +1973,6 @@ table.resource-tree {
     overflow: scroll;
 
     &__body {
-        
         &__head-row {
             display: flex;
             font-size: 13px;
@@ -1992,7 +1991,7 @@ table.resource-tree {
             }
 
             &__col-2 {
-                flex: 2
+                flex: 3;
             }
         }
 
@@ -2010,9 +2009,8 @@ table.resource-tree {
             }
 
             &__col-2 {
-                flex: 2
+                flex: 3;
             }
-
         }
     }
 }
