--- a/src/components/workflowEditor/workflowEditor.scss
+++ b/src/components/workflowEditor/workflowEditor.scss
@@ -110,3 +110,12 @@
 	bottom: 108px;
 	right: 96px;
 }
+
+.workflow-options-modal {
+	margin: 0 auto;
+	width: 650px;
+	margin-top: 40px;
+	box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.20);
+    background: var(--N0);
+    position: relative;
+}
