--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2966,6 +2966,10 @@ textarea,
     height: 8px;
 }
 
+.h-10 {
+    height: 10px;
+}
+
 .h-12 {
     height: 12px;
 }
@@ -3104,6 +3108,10 @@ textarea,
 
 .h-380 {
     height: 380px !important;
+}
+
+.h-500 {
+    height: 500px !important;
 }
 
 // Minimum Height
