feat: add support for description

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2522,6 +2522,12 @@ textarea,
     }
 }
 
+.info-icon-n5 {
+    circle {
+        fill: var(--N500);
+    }
+}
+
 .info-icon-n6 {
     circle {
         fill: var(--N600);
