--- a/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
+++ b/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
@@ -1,14 +1,46 @@
 .env-overview-container {
     grid-template-columns: 250px 1fr;
     height: calc(100vh - 78px);
+    background: linear-gradient(249deg, #d4e6f7 0%, var(--N50) 50.58%);
 
     .app-deployments-info-wrapper {
+        border-radius: 4px;
+        background-color: white;
+        border: 1px solid var(--N100, #edf1f5);
 
         .app-deployments-info-header,
         .app-deployments-info-row {
-            grid-template-columns: 250px 130px 130px 1fr;
+            grid-template-columns: 20px 16px 200px 130px 200px 334px 1fr;
             column-gap: 16px;
             grid-auto-rows: 36px;
         }
     }
+}
+
+.checkbox {
+    display: inline-block;
+    height: 20px;
+    width: 30px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.checkbox--active {
+    background-color: red;
+    border-color: red;
+}
+
+.temp {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+
+.list-container {
+    width: 1012px;
 }
