--- a/src/components/app/details/appDetails/appDetails.scss
+++ b/src/components/app/details/appDetails/appDetails.scss
@@ -1788,7 +1788,8 @@ table.resource-tree {
     margin-right: 4px;
 }
 
-.source-info-container {
+.source-info-container,
+.app-details-info-card {
     .dc__app-summary__icon {
         &.healthy {
             background-size: contain, contain;
