--- a/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
+++ b/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
@@ -15,6 +15,19 @@
             grid-auto-rows: 36px;
         }
     }
+
+    .response-list-container {
+        max-height: calc(100vh - 120px);
+        .response-row {
+            display: grid;
+            grid-template-columns: repeat(2, 200px) auto;
+            grid-column-gap: 16px;
+
+            &.is-virtual {
+                grid-template-columns: repeat(2, 200px) auto 103px;
+            }
+        }
+    }
 }
 
 .checkbox {
