margin css added in base class

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3357,6 +3357,10 @@ textarea,
     margin: 0 !important;
 }
 
+.m-8-imp {
+    margin: 8px !important;
+}
+
 .m-tb-20 {
     margin-top: 20px;
     margin-bottom: 20px;
