--- a/src/css/workflow.scss
+++ b/src/css/workflow.scss
@@ -49,7 +49,10 @@
 
 .workflow__body {
     position: relative;
-    border-radius: 4px !important;
+
+    &.br-4 {
+        border-radius: 4px;
+    }
 }
 
 .workflow__name {
