feat: add coming soon flag for workflow option modal

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3524,6 +3524,10 @@ textarea,
     transform: rotate(180deg);
 }
 
+.dc__flip-45 {
+    transform: rotate(45deg);
+}
+
 .dc__flip-90 {
     transform: rotate(-90deg);
 }
