--- a/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
+++ b/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
@@ -10,10 +10,16 @@
 
         .app-deployments-info-header,
         .app-deployments-info-row {
-            grid-template-columns: 20px 16px 200px 130px 200px 334px 1fr;
+            grid-template-columns: 20px 16px 200px 130px 200px 1fr;
             column-gap: 16px;
             grid-auto-rows: 36px;
+            transition: grid-template-columns 0.4s ease-out;
+
+            &.last-deployed-expanded {
+                grid-template-columns: 20px 16px 200px 130px 330px 1fr;
+            }
         }
+
     }
 
     .response-list-container {
