UAT fixes: some style changes

--- a/src/components/app/details/appDetails/appDetails.scss
+++ b/src/components/app/details/appDetails/appDetails.scss
@@ -1914,6 +1914,7 @@ table.resource-tree {
     align-items: flex-start;
     flex-direction: column;
     overflow: hidden;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.20);
 
     &__top-container {
         align-items: flex-start;
