--- a/src/components/v2/appDetails/k8Resource/NodeTreeTabList.scss
+++ b/src/components/v2/appDetails/k8Resource/NodeTreeTabList.scss
@@ -1,5 +1,7 @@
 .resource-tree-wrapper {
     box-shadow: inset 0 -1px 0 0 var(--N200);
+    background-color: white;
+    padding-top: 12px;
 
     .resource-tree-tab {
         border-top: 1px solid var(--N200);
