--- a/src/components/app/Overview/Overview.scss
+++ b/src/components/app/Overview/Overview.scss
@@ -1,13 +1,13 @@
 .app-overview-container {
     display: grid;
-    grid-template-columns: 0 minmax(auto, 1400px);
+    grid-template-columns: 0 minmax(0, 1400px);
     justify-content: center;
     background: linear-gradient(249deg, #D4E6F7 0%, var(--N50) 50.58%);
     overflow: auto;
     transition: grid-template-columns 0.2s ease-out;
 
     &.sidebar-open {
-        grid-template-columns: 300px minmax(auto, 1068px);
+        grid-template-columns: 300px minmax(0, 1068px);
         gap: 32px;
     }
 
