Fix: styling issues in EnvironmentOverview component

--- a/src/css/forms.scss
+++ b/src/css/forms.scss
@@ -307,6 +307,7 @@ p.sentence-case:first-letter {
     height: 20px;
     position: absolute;
     left: 0;
+    top: 0;
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url('../assets/icons/ic-checkbox-unselected.svg');
