--- a/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
+++ b/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
@@ -1,5 +1,8 @@
 .env-overview-container {
-    grid-template-columns: 250px 1fr;
+    display: grid;
+    grid-template-columns: 300px minmax(auto, 1068px);
+    grid-gap: 32px;
+    gap: 32px;
     height: calc(100vh - 78px);
     background: linear-gradient(249deg, #d4e6f7 0%, var(--N50) 50.58%);
 
@@ -10,18 +13,19 @@
 
         .app-deployments-info-header,
         .app-deployments-info-row {
-            grid-template-columns: 268px 130px 335px 1fr;
+            grid-template-columns: minmax(170px, 20%) 15% 25% 38%;
             column-gap: 16px;
             grid-auto-rows: 36px;
-            transition: grid-template-columns 0.4s ease-out;
+            transition: grid-template-columns 0.2s ease-in-out;
 
             &.last-deployed-expanded {
-                grid-template-columns: 268px 130px 330px 1fr;
+                grid-template-columns: minmax(170px, 20%) 15% 35% 28%;
             }
 
             .app-deployment-info-row-leftsection {
-                grid-template-columns: 20px 16px 200px 1fr;
+                grid-template-columns: 15% 15% 70%;
                 column-gap: 16px;
+                min-width: 170px;
             }
         }
 
