--- a/src/components/ResourceBrowser/ResourceBrowser.scss
+++ b/src/components/ResourceBrowser/ResourceBrowser.scss
@@ -234,3 +234,26 @@
 .resource-details-container {
     height: calc(100vh - 84px);
 }
+
+.sort-icon {
+    background-image: url('../../assets/icons/ic-sort-arrow-down.svg');
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    position: relative;
+    top: -4px;
+}
+
+.sort-column {
+    background-image: url('../../assets/icons/misc/sort.svg');
+    display: inline-block;
+    height: 20px;
+    width: 16px;
+    background-size: 100% 100%;
+    -o-background-size: 100% 100%;
+    -webkit-background-size: 100% 100%;
+}
+
+.desc {
+    transform: rotate(180deg);
+}
