chore: add icon-dim-80

--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -183,6 +183,11 @@
     height: 48px;
 }
 
+.icon-dim-80 {
+    width: 80px;
+    height: 80px;
+}
+
 .icon-n2 {
     .fill-color {
         fill: var(--N200);
