--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3420,6 +3420,10 @@ textarea,
     margin-right: 0px !important;
 }
 
+.mr-6-imp {
+    margin-right: 6px !important;
+}
+
 .mr-8-imp {
     margin-right: 8px !important;
 }
@@ -3951,6 +3955,10 @@ textarea::placeholder {
 .fetch-more-loading-button svg {
     width: 100% !important;
     height: 100% !important;
+}
+
+.fs-11-imp{
+    font-size: 11px !important;
 }
 
 // Start: accouncement banner
