--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -118,6 +118,11 @@
     height: 16px;
 }
 
+.icon-dim-16-imp {
+    width: 16px !important;
+    height: 16px !important;
+}
+
 .icon-dim-18 {
     width: 18px;
     height: 18px;
