--- a/src/components/app/details/appConfig/appConfig.scss
+++ b/src/components/app/details/appConfig/appConfig.scss
@@ -179,6 +179,11 @@
         margin-left: auto;
     }
 
+    .w-960 {
+        width: 960px;
+    }
+
+       
     .environment-routes {
         width: 100%;
         margin-left: 24px;
@@ -207,4 +212,5 @@
     .repo-configured-icon {
         width: 96px;
     }
+        
 }
