--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2119,10 +2119,18 @@ button.anchor {
 
 .dc__border-bottom-n1 {
     border-bottom: solid 1px var(--N100);
+
+    &--important {
+        border-bottom: solid 1px var(--N100) !important;
+    }
 }
 
 .dc__border-right-n1 {
     border-right: solid 1px var(--N100);
+}
+
+.dc__border-left-n1 {
+    border-left: solid 1px var(--N100);
 }
 
 .dc__border-bottom-y2 {
