feat: add parallel edge for node with endNodes

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3671,6 +3671,10 @@ textarea::placeholder {
     background-color: var(--R100);
 }
 
+.dc__hover-r500:hover {
+    background-color: var(--R500);
+}
+
 .dc__hover-cn1:hover {
     color: var(--N100);
 }
