add util classes for max width

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2204,8 +2204,16 @@ button.anchor {
     max-width: 500px;
 }
 
+.dc__mxw-600 {
+    max-width: 600px;
+}
+
 .dc__mxw-800 {
     max-width: 800px;
+}
+
+.dc__mxw-960 {
+    max-width: 960px;
 }
 
 .dc__mxw-1000 {
