removed onblur props from custom input

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3324,6 +3324,10 @@ textarea,
     padding-left: 28px !important;
 }
 
+.pt-5-imp{
+    padding-top: 5px !important;
+}
+
 .pt-40 {
     padding-top: 40px;
 }
@@ -3364,6 +3368,10 @@ textarea,
 
 .pt-4-imp {
     padding-top: 4px !important;
+}
+
+.pt-5-imp{
+    padding-bottom: 5px !important;
 }
 
 .pb-6-imp {
