feat: add add cd icon on parallel edge

--- a/src/css/workflow.scss
+++ b/src/css/workflow.scss
@@ -33,6 +33,10 @@
 
 .workflow--create {
     min-width: 840px;
+
+    .add-cd-edge-btn:hover {
+        fill: var(--V700)
+    }
 }
 
 .workflow--trigger {
