--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3466,6 +3466,10 @@ textarea,
     margin-top: 120px;
 }
 
+.ml-36-imp{
+    margin-left: 36px !important 
+}
+
 .ml-54 {
     margin-left: 54px
 }
