add api to check for lock changes

--- a/src/components/deploymentConfig/deploymentConfig.scss
+++ b/src/components/deploymentConfig/deploymentConfig.scss
@@ -513,6 +513,6 @@
     z-index: 21;
     right: 0;
     bottom: 0;
-    position: 'absolute';
-    box-shadow: '0 4 8 0 rgba(0, 0, 0, 0.20)'
+    position: absolute;
+    box-shadow: 0 4 8 0 rgba(0, 0, 0, 0.20)
 }
