feat: add support for tooltip in addCDButtons

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -266,6 +266,9 @@ a:focus {
 .dc__white-space-pre {
     white-space: pre;
 }
+.dc__white-space-pre-wrap {
+    white-space: pre-wrap;
+}
 
 .dc__hyphens-auto {
     -ms-hyphens: auto;
