--- a/src/components/app/details/appDetails/appDetails.scss
+++ b/src/components/app/details/appDetails/appDetails.scss
@@ -245,6 +245,12 @@ table.pod__table td:last-child {
     padding-right: 20px;
 }
 
+.no-pod-list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .no-pod {
     width: 100%;
     height: 100%;
