Revert "feat: Generalized custom input"

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2803,10 +2803,6 @@ textarea,
     width: 200px;
 }
 
-.w-200-imp {
-    width: 200px !important;
-}
-
 .w-204 {
     width: 204px;
 }
@@ -2884,7 +2880,7 @@ textarea,
 }
 
 .w-500 {
-    width: 500px !important;
+    width: 510px !important;
 }
 
 .w-505 {
@@ -2936,7 +2932,7 @@ textarea,
     width: 90%;
 }
 
-.w-95-imp {
+.w-95 {
     width: 95% !important;
 }
 
@@ -3054,10 +3050,6 @@ textarea,
 
 .h-36 {
     height: 36px !important;
-}
-
-.h-38 {
-    height: 38px;
 }
 
 .h-40 {
@@ -3340,10 +3332,6 @@ textarea,
     padding-left: 28px !important;
 }
 
-.pt-5-imp{
-    padding-top: 5px !important;
-}
-
 .pt-40 {
     padding-top: 40px;
 }
@@ -3384,10 +3372,6 @@ textarea,
 
 .pt-4-imp {
     padding-top: 4px !important;
-}
-
-.pb-5-imp{
-    padding-bottom: 5px !important;
 }
 
 .pb-6-imp {
@@ -3476,10 +3460,6 @@ textarea,
 
 .mt-120 {
     margin-top: 120px;
-}
-
-.ml-36-imp {
-    margin-left: 36px !important 
 }
 
 .ml-54 {
