--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -188,6 +188,11 @@
     height: 48px;
 }
 
+.icon-dim-72 {
+    width: 72px;
+    height: 72px;
+}
+
 .icon-dim-80 {
     width: 80px;
     height: 80px;
