fix for webhook token

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3421,6 +3421,10 @@ textarea,
     padding: 6px 12px !important;
 }
 
+.p-0-8-imp {
+    padding: 0px 8px !important;
+}
+
 // Margin in pixels
 .dc__m-auto {
     margin: auto;
