chore: update copy css

--- a/src/components/v2/appDetails/k8Resource/nodeType/nodeType.scss
+++ b/src/components/v2/appDetails/k8Resource/nodeType/nodeType.scss
@@ -70,7 +70,7 @@
     .resource-action-tabs__clipboard {
         &:hover {
             path {
-                stroke: var(--B500);
+                fill: var(--B500);
             }
         }
     }
