--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4034,6 +4034,11 @@ textarea::placeholder {
     font-size: 11px !important;
 }
 
+.ic-toggle-dim {
+    width: 32px;
+    height: 20px;
+}
+
 // Start: accouncement banner
 .announcement-banner-container {
     &.page-header-banner {
