feat: add build-infra form

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2191,6 +2191,10 @@ button.anchor {
     max-width: none !important;
 }
 
+.dc__mxw-90 {
+    max-width: 90px;
+}
+
 .dc__mxw-120 {
     max-width: 120px;
 }
@@ -2215,6 +2219,10 @@ button.anchor {
     max-width: 400px;
 }
 
+.dc__mxw-420 {
+    max-width: 420px;
+}
+
 .dc__mxw-500 {
     max-width: 500px;
 }
@@ -2225,6 +2233,10 @@ button.anchor {
 
 .dc__mxw-800 {
     max-width: 800px;
+}
+
+.dc__mxw-920 {
+    max-width: 920px;
 }
 
 .dc__mxw-960 {
@@ -3603,6 +3615,10 @@ textarea,
 
 .dc__gap-20 {
     gap: 20px;
+}
+
+.dc__gap-24 {
+    gap: 24px;
 }
 
 .dc__gap-32 {
