Added styles files in local

--- a/src/css/patternfly.scss
+++ b/src/css/patternfly.scss
@@ -4,62 +4,62 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 300;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-Light.woff') format('woff');
+    src: local('Open Sans'), url('../assets/fonts/OpenSans-Light-webfont.eot');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-VariableFont_wdthwght.woff') format('woff');
+    src: local('Open Sans'), url('../assets/fonts/OpenSans-Regular-webfont.eot');
 
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: italic;
     font-weight: 300;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-LightItalic.woff') format('woff');
+    src: local('Open Sans'), url('../assets/fonts/OpenSans-LightItalic-webfont.eot');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: italic;
     font-weight: 400;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-Italic.woff') format('woff');
+    src: local('Open Sans'), url('../fonts/OpenSans-Italic-webfont.eot');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 600;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-SemiBold.woff') format('woff');
+    src: local('Open Sans'), url('../fonts/OpenSans-Semibold-webfont.eot');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: italic;
     font-weight: 600;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-SemiBoldItalic.woff') format('woff');
+    src: local('Open Sans'), url('../fonts/OpenSans-SemiboldItalic-webfont.eot');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-Bold.woff') format('woff');
+    src: local('Open Sans'), url('../fonts/OpenSans-Bold-webfont.eot');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: italic;
     font-weight: 700;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-BoldItalic.woff') format('woff');
+    src: local('Open Sans'), url('../fonts/OpenSans-BoldItalic-webfont.eot');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: italic;
     font-weight: 800;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-ExtraBoldItalic.woff') format('woff');
+    src: local('Open Sans'), url('../fonts/OpenSans-ExtraBoldItalic-webfont.eot');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 800;
-    src: local('Open Sans'), url('https://fonts.cdnfonts.com/s/14884/OpenSans-ExtraBold.woff') format('woff');
+    src: local('Open Sans'), url('../fonts/OpenSans-ExtraBold-webfont.eot');
 }
 @font-face {
     font-family: 'PatternFlyIcons-webfont';
